# aira_relay

./: .dockerignore  .env  .env.example  ARCHITECTURE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  lifespan.py  main.py  pyproject.toml  pyrightconfig.json
.claude/: settings.json
adapters/: embedding.py  waha.py
config/: constants.py  settings.py
core/: chat_service.py  connection_service.py  contact_service.py  lid_resolver.py  message_service.py  user_service.py  whatsapp.py
db/: init.py
db/mongodb/: collections.py  manager.py
db/qdrant/: collections.py  manager.py
events/: bus.py  mcp_handler.py  openclaw_handler.py  session_registry.py
gows/: .gitignore  Makefile  README.md
helpers/: content_blocks.py  conversation.py  jid.py  phonetic.py
infra/: embedding.py  fastembed_adapter.py  openclaw.py  openrouter.py
infra/mongodb/: chat_repo.py  collections.py  manager.py  state_repo.py  user_repo.py
infra/qdrant/: collections.py  manager.py
infra/waha/: client.py  wire_models.py
mcp/: server.py
models/: chat.py  events.py  exceptions.py  message.py  responses.py  user.py  vector.py
ports/: embedding.py  event_bus.py  llm.py  messaging.py  repositories.py  vector_store.py
relay/: notifications.py  server.py  session_registry.py
relay_mcp/: container.py  llm_adapter.py  server.py
utils/: concurrency.py  crypto.py
waha-plus/: .gitignore  Dockerfile  Dockerfile.prod  docker-compose.debug.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.sh  package.json
webhook/: app.py  models.py  processor.py
(+55 files in other folders)
